@@ -1,5 +1,5 @@
 name = Test-PerlTidy
-version = 20190309.001
+version = 20190402
 author = Shlomi Fish <shlomif@cpan.org>
 license = Perl_5
 copyright_holder = Edmund von der Burg
